--- a/index.html
+++ b/index.html
@@ -488,32 +488,17 @@ var updateConsiderString = function () {
 }
 </script>
 
-<!-- STATCOUNTER GAMES -->
-<script type="text/javascript">
-var sc_project=6867947;
-var sc_invisible=1;
-var sc_security="458bbcb5";
+<!-- FOR PIPPINBARR.COM -->
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GECKZQ62DH"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+
+gtag('config', 'G-GECKZQ62DH');
 </script>
-<script type="text/javascript"
-src="http://www.statcounter.com/counter/counter.js"></script>
-<noscript><div class="statcounter"><a title="shopify
-    analytics" href="http://statcounter.com/shopify/"
-    target="_blank"><img class="statcounter"
-    src="http://c.statcounter.com/6867947/0/458bbcb5/1/"
-    alt="shopify analytics"></a></div></noscript>
-    <!-- END STATCOUNTER GAMES -->
-
-    <!-- GOOGLE ANALYTICS UNIFIED -->
-    <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-25915730-1', 'auto');
-    ga('send', 'pageview');
-    </script>
-    <!-- END GOOGLE ANALYTICS UNIFIED -->
 
 </body>
 
